config/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nue
spec:
  type: ClusterIP
  ports:
    - name: admin
      port: 80
      targetPort: 4000
    - name: api
      port: 90
      targetPort: 3000
  selector:
    app: nue
