config/k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nue
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod-cluster-issuer
spec:
  tls:
    - hosts:
        - nue.sandbox.verybigthings.com
      secretName: nue-tls
  rules:
    - host: nue.sandbox.verybigthings.com
      http:
        paths:
          - backend:
              serviceName: nue
              servicePort: 80
